--- a/docs/css/devconf.css
+++ b/docs/css/devconf.css
@@ -21,6 +21,12 @@ a:visited {
   color: #8786df;
 }
 
+a.meetup {
+  font-size: 3em; 
+  color: #000;
+  font-family: "Montserrat", sans-serif;
+}
+
 .padding-top-lg {
   padding-top: 5em;
 }
@@ -92,9 +98,9 @@ a:visited {
 }
 
 .tagline {
-  font-family: Roboto Mono, monospace;
-  color: #8786df;
-  font-size: 140%;
+  font-family: "Montserrat", sans-serif;
+  color: #820000;
+  font-size: 200%;
   font-weight: bold;
 }
 
@@ -165,11 +171,12 @@ h3.first {
 .intro-section {
   overflow: hidden;
   text-align: center;
-  background: #fff url("../img/petrov_brno-illustration2.png") no-repeat 80% 100%;
+  /*background: #fff url("../img/petrov_brno-illustration2.png") no-repeat 80% 100%;*/
   background-size: contain;
-  padding: 100px 0 4em;
+  padding: 100px 0 3em;
   font-size: 130%;
   color: #999;
+  height: 100%;
 }
 
 .logo img {
@@ -194,12 +201,19 @@ h3.first {
 
 .intro-text {
   margin: 0 auto;
-  max-width: 20em;
-  margin-bottom: 15px;
+  max-width: 40em;
+  /*margin-bottom: 15px;*/
+  color: #111111;
 }
 
 .time-and-place address {
+  color: #888888;
   margin: 0;
+  font-weight: bold;
+}
+
+.time-and-place time {
+  color: #999999;
 }
 
 .about-section {
