--- a/docs/css/devconf.css
+++ b/docs/css/devconf.css
@@ -4,6 +4,10 @@ body {
   color: #333;
 }
 
+h1 {
+  color: #000000;
+}
+
 nav, .intro-content, h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   font-family: "Montserrat", sans-serif;
@@ -97,10 +101,22 @@ a.meetup {
   color: #8786df;
 }
 
+.description {
+  color: #000;
+  font-size: .8em;
+  font-style: italic;
+}
+
+.title {
+  font-family: "Montserrat", sans-serif;
+  color: #000000;
+  font-size: 2em;
+}
+
 .tagline {
   font-family: "Montserrat", sans-serif;
   color: #820000;
-  font-size: 200%;
+  font-size: 3em;
   font-weight: bold;
 }
 
@@ -154,6 +170,7 @@ section h2 a {
 
 h3, h4, h5, h6 {
   padding: 2em 0 1em;
+  color: #000000;
 }
 
 h3.first {
@@ -173,10 +190,10 @@ h3.first {
   text-align: center;
   /*background: #fff url("../img/petrov_brno-illustration2.png") no-repeat 80% 100%;*/
   background-size: contain;
-  padding: 100px 0 3em;
+  padding: 3em 0 3em;
   font-size: 130%;
   color: #999;
-  height: 100%;
+  min-height: 100%;
 }
 
 .logo img {
@@ -196,12 +213,16 @@ h3.first {
 }
 
 .intro-content > div {
-  padding: 1em 0;
+  padding: .4em 0;
+}
+
+.next-page {
+  padding-bottom: 2em;
 }
 
 .intro-text {
   margin: 0 auto;
-  max-width: 40em;
+  max-width: 25em;
   /*margin-bottom: 15px;*/
   color: #111111;
 }
@@ -213,7 +234,7 @@ h3.first {
 }
 
 .time-and-place time {
-  color: #999999;
+  color: #000000;
 }
 
 .about-section {
@@ -307,6 +328,10 @@ h2 .fa {
   }
 
   .intro-text {
-    max-width: 18em;
+    max-width: 15em;
+  }
+
+  .navbar {
+    display: block!important;
   }
 }
